[package]
name = "centipede"
version = "0.2.6"
authors = [
    "Omer <omer@kzencorp.com>",
    "Gary <gary@kzencorp.com>"
]

[lib]
crate-type = ["lib"]

[dependencies]
curv = { git = "https://github.com/PolySignInc/curv", features =  ["ec_secp256k1"] ,branch = "v0.2.6t"}
bulletproof = {git = "https://github.com/PolySignInc/bulletproofs", branch = "v0.2.5t"}
serde_derive = "1.0"
serde = "1.0"
rayon = "1.0.3"

[patch.crates-io]
rust-gmp = { version = "0.5.0", features = ["serde_support"], git = "https://github.com/PolySignInc/rust-gmp" }

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "v_backup"
path = "benches/v_backup.rs"
harness = false
